--- a/flaskr/templates/winner.html
+++ b/flaskr/templates/winner.html
@@ -1,6 +1,6 @@
 <html>
-	<body>
-		<img src="{{ url_for('static', filename = 'winner.jpeg') }}" alt = "YOU WON!!!">
+	<body style="display:flex;justify-content:center;">
+		<img src="{{ url_for('static', filename = 'winner.jpeg') }}" alt = "YOU WON!!!" style="width:50%;height:auto;">
 	</body>
 	<!-- <table>
 		{%for data in coords%}
